--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finalcase-timus",
+  "name": "nodejs-web-project",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -8,28 +8,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gzcmustafa/FinalCase-Timus.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gzcmustafa/FinalCase-Timus/issues"
-  },
-  "homepage": "https://github.com/gzcmustafa/FinalCase-Timus#readme",
   "dependencies": {
-    "@babel/runtime": "^7.23.6",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+    "mongoose": "^8.0.3",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.2",
+    "validator": "^13.11.0"
   }
 }
